--- a/angulare-basics/src/app/app.component.html
+++ b/angulare-basics/src/app/app.component.html
@@ -1,4 +1,11 @@
 <h1>Hello Angular World</h1>
 
+<p>{{ title }}</p>
+
+<p><strong>{{ number - 2 }}</strong></p>
+
 <app-post></app-post>
-<app-post></app-post>
+
+<hr>
+
+<app-post4></app-post4>
