--- a/angulare-basics/src/app/app.component.html
+++ b/angulare-basics/src/app/app.component.html
@@ -1,10 +1,24 @@
 <h1>Hello Angular World</h1>
 
-<p>{{ title }}</p>
+<!-- <p>{{ title }}</p>
 
 <p><strong>{{ number - 2 }}</strong></p>
+<p><strong>{{ arr }}</strong></p>
+<p><strong>{{ obj.b.c }}</strong></p>
 
-<app-post></app-post>
+<app-post></app-post> -->
+
+<button (click)="onClick()">Click me</button>
+
+<input
+  type="text"
+  name=""
+  id=""
+  (keyup.enter)="onInput($event)"
+  (blur)="onBlur(myInput.value)"
+  #myInput
+>
+<p><strong>{{inputValue}}</strong></p>
 
 <hr>
 
