--- a/angulare-basics/src/app/app.component.html
+++ b/angulare-basics/src/app/app.component.html
@@ -1,11 +1,28 @@
 <h1>Hello Angular World</h1>
 
-<button (click)="backgroundToggle = !backgroundToggle">Toggle</button>
+<button (click)="toggle = !toggle">Toggle</button>
 
-<div [ngStyle]="{
+
+<p *ngIf="toggle; else blueP" class="red">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, voluptates!</p>
+
+<ng-template #blueP>
+  <p class="blue">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, enim?</p>
+</ng-template>
+
+
+
+<!-- NG STYLE -->
+
+<!-- <div [ngStyle]="{
   width: '200px',
   height: '200px',
   borderRadius: '5px',
   border: '1px solid #ccc',
   background: backgroundToggle ? 'red' : 'blue'
-}"></div>
+}"></div> -->
+<!-- <p [ngClass]="{
+  red: backgroundToggle,
+  blue: !backgroundToggle
+}">Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores, quasi.</p> -->
+<!--
+<p [class.blue]="!backgroundToggle" [class.red]="backgroundToggle">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Accusamus, voluptatem.</p> -->
