--- a/angulare-basics/src/app/app.component.html
+++ b/angulare-basics/src/app/app.component.html
@@ -1,13 +1,34 @@
 <h1>Hello Angular World</h1>
 
-<button (click)="toggle = !toggle">Toggle</button>
+<ul>
+  <li *ngFor="let n of "></li>
+</ul>
 
 
-<p *ngIf="toggle; else blueP" class="red">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, voluptates!</p>
+
+
+
+
+<!-- <button (click)="toggle = !toggle">Toggle</button> -->
+
+<!-- SWITCH -->
+
+<!-- <div [ngSwitch]="toggle">
+  <p *ngSwitchCase="true" class="red">Lorem, ipsum.</p>
+  <p *ngSwitchCase="false" class="blue">Lorem, ipsum. Lorem, ipsum.</p>
+  <p *ngSwitchDefault>Lorem, ipsum.</p>
+</div> -->
+
+
+
+<!-- ng IF & ng ELSE -->
+
+
+<!-- <p *ngIf="toggle; else blueP" class="red">Lorem ipsum dolor sit amet consectetur adipisicing elit. Unde, voluptates!</p>
 
 <ng-template #blueP>
   <p class="blue">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aliquam, enim?</p>
-</ng-template>
+</ng-template> -->
 
 
 
