--- a/angular-directive/src/app/app.component.html
+++ b/angular-directive/src/app/app.component.html
@@ -9,7 +9,7 @@
   </p>
 
   <p
-    appStyle="blue"
+    appStyle
     [dStyles]="{ border: '2px solid red', borderRadius: '5px' }"
   >
     Lorem ipsum dolor sit amet consectetur adipisicing elit. Soluta, blanditiis.
