--- a/angular-routing/src/app/about/about.component.html
+++ b/angular-routing/src/app/about/about.component.html
@@ -1,2 +1,8 @@
 <h1>About page</h1>
-<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic laboriosam dolorum commodi!</p>
+<p>
+  Lorem ipsum dolor sit amet consectetur adipisicing elit. Hic laboriosam
+  dolorum commodi!
+</p>
+<p><a [routerLink]="['/about', 'extra']">Show extra</a></p>
+
+<router-outlet></router-outlet>
