--- a/angular-routing/src/app/about-extra/about-extra.component.html
+++ b/angular-routing/src/app/about-extra/about-extra.component.html
@@ -1,1 +1,10 @@
-<p>about-extra works!</p>
+<p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti amet minima
+  voluptate dolorum maiores nobis quis, itaque odio ea, minus unde rerum quam,
+  veniam officia. Saepe, voluptatibus. Doloribus, amet animi.
+</p>
+<p>
+  Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti amet minima
+  voluptate dolorum maiores nobis quis, itaque odio ea, minus unde rerum quam,
+  veniam officia. Saepe, voluptatibus. Doloribus, amet animi.
+</p>
